--- a/Online-food-shop/css/main.css
+++ b/Online-food-shop/css/main.css
@@ -147,3 +147,124 @@ section .main_btn:hover i{
 }
 
 /* About section */
+
+.about{
+    width: 100%;
+    height: 100vh;
+    padding: 70px 0;
+}
+
+.about .about_main{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about .about_main .image img{
+    width: 800px;
+    top: 30px;
+    position: relative;
+}
+
+.about .about_main .about_text h1 span{
+    color: #fac031;
+    margin-right: 10px;
+    font-family: mv boli;
+}
+
+.about .about_main .about_text h1{
+    font-size: 55px;
+    position: relative;
+    bottom: 50px;
+}
+
+.about .about_main .about_text h3{
+    font-size: 30px;
+    position: relative;
+    margin: 0 0 50px 0;
+}
+
+.about .about_main .about_text p{
+    width: 650px;
+    text-align: justify;
+    margin-right: 30px;
+    line-height: 22px;
+}
+
+.about .about_btn{
+    background: #fac031;
+    padding: 12px 25px;
+    position: relative;
+    text-decoration: none;
+    color: #fff;
+    left: 60%;
+    bottom: 40px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+
+/* Menu */
+.menu{
+    width: 100%;
+    padding:70px ;
+}
+
+.menu h1{
+    font-size: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.menu h1 span {
+    color: #fac031;
+    margin-left: 15px;
+    font-family: mv boli;
+}
+
+.menu h1 span::after{
+    content: " ";
+    width: 100%;
+    height:2px;
+    background: #fac031;
+    display: block;
+    position: relative;
+    bottom: 15px;
+}
+
+.menu .menu_box{
+    width: 95%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.menu .menu_box .menu_card{
+    width: 325px;
+    height: 480px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgb(0,0,0,0.2);
+
+}
+
+.menu .menu_box .menu_card .menu_image{
+    width: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+    height: 245px;
+}
+
+.menu .menu_box .menu_card .menu_image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position:center;
+    transition: .3s;  
+}
+
+.menu .menu_box .menu_card .menu_image:hover img{
+    transform: scale(1.1);
+}
